# musicboxrtos

./: .gitignore
arduino/RP2040_MIDI_5110_RTOS/: button_isr.cpp  button_isr.h  config.h  display_task.cpp  display_task.h  main.ino  midi_task.cpp  midi_task.h  ui_task.cpp  ui_task.h
arduino/WaveshareRP2040Zero_USBMIDI/: MILESTONE.md  button_isr.cpp  button_isr.h  config.h  main.ino  midi_task.cpp  midi_task.h  ui_task.cpp  ui_task.h
arduino/nano33_iot_wifi_ble_scanner/: README.md  nano33_iot_wifi_ble_scanner.ino
arduino/nano33_iot_wifi_ble_scanner/i2c_scanner/: i2c_scanner.ino
arduino/nano33_iot_wifi_ble_scanner/lcd_diag_0x27/: lcd_diag_0x27.ino
arduino/rp2040_usb_midi_rtos/: button_isr.cpp  button_isr.h  config.h  event_types.h  main.ino  midi_task.cpp  midi_task.h  ui_task.cpp  ui_task.h
arduino/test_sketch_usb_midi/: test_sketch_usb_midi.ino
arduino/test_sketch_usb_midi_button/: test_sketch_usb_midi_button.ino
dev/esp32c3_musicbox_nimble/: BLE_MIDI_TESTING.md  CMakeLists.txt  FLASH_AND_VERIFY.md  README.md  ble_midi_test_client.py  sdkconfig  sdkconfig.defaults
dev/esp32c3_musicbox_nimble/main/: CMakeLists.txt  ble_midi.c  ble_midi.h  config_store.c  config_store.h  http_sb1.c  http_sb1.h  main.c  sb1_uart_rp2040.h  wifi_sb1.c  wifi_sb1.h
dev/rp2040_projects/freertos_skeleton/: .gitattributes  CMakeLists.txt  FreeRTOSConfig.h  QUICKSTART.md  build_uf2.sh  transfer_uf2.ps1  transfer_uf2.sh
dev/rp2040_projects/freertos_skeleton/docs/: ble-system-model.md  menu-reference.md  midi-files-storage.md
dev/rp2040_projects/freertos_skeleton/include/: tusb_config.h
dev/rp2040_projects/freertos_skeleton/src/: button_isr.c  button_isr.h  config.h  display_task.c  display_task.h  gpio_led.c  gpio_led.h  main.c  menu.c  menu.h  midi_task.c  midi_task.h  pcd8544.c  pcd8544.h  pot_task.c  pot_task.h  sb1_bear_bitmap.c  sb1_bear_bitmap.h  sb1_link_task.c  sb1_link_task.h  sb1_midi_router.c  sb1_midi_router.h  sb1_msc.c  sb1_msc.h  sb1_setup.c  sb1_setup.h  sb1_uart_midi.c  sb1_uart_midi.h  sb1_verticalmenu.c  sb1_verticalmenu.h  ui_task.c  ui_task.h  usb_descriptors.c  usb_descriptors.h  usb_task.c  usb_task.h
dev/rp2040_projects/freertos_skeleton/tools/: ttf_to_pcd8544_font.py
raw/: lid_scan.afdesign~lock~
reference/: reference.pur  urlsREADME.txt
tools/: ByteBounce_16.c  ByteBounce_16.h  ByteBounce_8.c  ByteBounce_8.h  ByteBounce_pcd8544_8.c  ByteBounce_pcd8544_8.h  convert_font.py  png_to_sb1_livemode_buttons.py  png_to_sb1_wireless_meter.py
ui/: sb1_84x48.h  sb1_84x48.txt  sb1_livemode_buttons.h  sb1_wireless_meter.h
